// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FloatInput /> accepts a value prop of type number 1`] = `
<div
  className="mui-mi-input-group"
>
  <span
    className="mui-mi-input-addon"
  >
    <span
      className="text"
    >
      0.1
    </span>
  </span>
  <input
    className="mui-mi-input-field"
    classes={
      Object {
        "addon": "mui-mi-input-addon",
        "inputGroup": "mui-mi-input-group",
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Enter decimal"
    value={3.2}
  />
</div>
`;

exports[`<FloatInput /> disabled w/ a min of 1 and max of 5 1`] = `
<div
  className="mui-mi-input-group"
>
  <span
    className="mui-mi-input-addon"
  >
    <span
      className="text"
    >
      0.1
    </span>
  </span>
  <input
    className="mui-mi-input-field"
    classes={
      Object {
        "addon": "mui-mi-input-addon",
        "inputGroup": "mui-mi-input-group",
      }
    }
    disabled={true}
    max={5}
    min={1}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Enter decimal"
    value=""
  />
</div>
`;

exports[`<FloatInput /> with a custom className 1`] = `
<div
  className="mui-mi-input-group"
>
  <span
    className="mui-mi-input-addon"
  >
    <span
      className="text"
    >
      0.1
    </span>
  </span>
  <input
    className="mui-mi-input-field custom-class"
    classes={
      Object {
        "addon": "mui-mi-input-addon",
        "inputGroup": "mui-mi-input-group",
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Enter decimal"
    value=""
  />
</div>
`;

exports[`<FloatInput /> with no props 1`] = `
<div
  className="mui-mi-input-group"
>
  <span
    className="mui-mi-input-addon"
  >
    <span
      className="text"
    >
      0.1
    </span>
  </span>
  <input
    className="mui-mi-input-field"
    classes={
      Object {
        "addon": "mui-mi-input-addon",
        "inputGroup": "mui-mi-input-group",
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Enter decimal"
    value=""
  />
</div>
`;
